--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/safcsp_background"
     android:minWidth="50dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="81dp"
     tools:showIn="@layout/activity_main">
+
+    <ImageButton
+        android:id="@+id/mapBtn"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/hajj_location"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/fab" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -21,6 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BottleCount">
 
+
         <com.budiyev.android.codescanner.CodeScannerView
             android:id="@+id/scanner_view_main"
             android:layout_width="match_parent"
@@ -29,26 +41,28 @@
             app:autoFocusButtonVisible="true"
             app:flashButtonColor="@android:color/white"
             app:flashButtonVisible="true"
+            app:frameAspectRatioHeight="1"
+            app:frameAspectRatioWidth="1"
             app:frameColor="@android:color/white"
             app:frameCornersSize="50dp"
-            app:frameAspectRatioWidth="1"
-            app:frameAspectRatioHeight="1"
             app:frameSize="0.75"
             app:frameThickness="2dp"
-            app:maskColor="#77000000"/>
+            app:maskColor="#77000000" />
 
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="80dp"
-        android:src="@android:color/transparent"
-        app:backgroundTint="#dadada"
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="180dp"
+        android:layout_height="70dp"
+        android:text="SR"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="36sp"
+        android:visibility="gone"
+        app:layout_constraintBaseline_toBaselineOf="@+id/WalletText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toRightOf="@+id/WalletText" />
 
     <TextView
         android:id="@+id/BottleCount"
@@ -61,8 +75,6 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#05968f"
         android:textSize="80sp"
-        app:layout_anchor="@id/fab"
-        app:layout_anchorGravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/fab"
         app:layout_constraintLeft_toLeftOf="@+id/fab"
         app:layout_constraintRight_toRightOf="@+id/fab"
@@ -86,48 +98,33 @@
         app:layout_constraintTop_toBottomOf="@+id/fab"
         app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="180dp"
-        android:layout_height="70dp"
-        android:text="SR"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="36sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/WalletText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/WalletText" />
-
-    <android.support.constraint.Guideline
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="20dp">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp" />
+        <ImageButton
+            android:id="@+id/ScannerBtn"
+            android:layout_width="113dp"
+            android:layout_height="92dp"
+            android:layout_marginBottom="120dp"
+            android:layout_marginStart="148dp"
+            android:background="@drawable/hajj_scanner"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageButton
-        android:id="@+id/ScannerBtn"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/hajj_scanner"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/fab" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="276dp"
+        android:src="@android:color/transparent"
+        android:visibility="invisible"
+        app:backgroundTint="#dadada"
+        app:layout_anchor="@+id/BottleCount"
+        app:layout_anchorGravity="center" />
 
-    <ImageButton
-        android:id="@+id/mapBtn"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/hajj_location"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/fab" />
-
-</android.support.constraint.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
